# marlin-cli

./: .pre-commit-config.yaml  dev_setup.sh  pyproject.toml
.github/workflows/: release.yml
marlin-cli/: constants.py  marlin.py
marlin-cli/api/: archetypes.py  modules.py
marlin-cli/commands/: docs.py  init.py  install.py
marlin-cli/util/: json_merge.py  test_json.json
marlin_cli/: marlin.py
marlin_cli/api/: modules.py
marlin_cli/commands/: install.py
marlin_cli/util/: cft_merge.py  yaml_merge.py
scripts/: build.sh
