[tool.poetry]
name = "marlin-cli"
version = "0.0.1"
description = ""
authors = ["George Cooper <george@marlincode.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"